@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.9226 2010/04/21 23:09:44 zafer Exp $
+$NetBSD: TODO,v 1.9227 2010/04/22 17:05:16 tnn Exp $
 
 Suggested new packages
 ======================
@@ -1339,7 +1339,6 @@ For possible perl packages updates, see http://www.pkgbox.org/p2c/
 	o texmaker-1.9.9
 	o tfmxplay-1.1.6
 	o thoth-0.2.1
-	o thunderbird-3.0.3
 	o tig-0.15
 	o tile-0.7.4
 	o tinc-1.0.13
